--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/03b0aaadec.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./images/logo1.jpg" type="image/x-icon">
-    <title style="color: green;">Spotify</title>
+    <title style="color: green;">Beat A Bet</title>
 </head>
 
 <body>
