--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/03b0aaadec.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./cs/style.css">
     <link rel="shortcut icon" href="./images/logo1.jpg" type="image/x-icon">
     <title style="color: green;">Beat A Bet</title>
 </head>
@@ -104,6 +104,6 @@
 
 
 </body>
-<script src="./script.js"></script>
+<script src="./js/script.js"></script>
 
 </html>
